# ReKernel

./: .gitignore  Cargo.toml  Makefile  README.md  build.py  build.rs  build.sh  build_rewrite.py  old-build.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
arch/x86/: Cargo.toml  target.json
arch/x86/src/: main.rs
arch/x86/src/boot_data/: boot.rs
boot_target/: build.rs  main.rs
configs/: Cargo_x86_64.boot.toml  Cargo_x86_64.default.toml  x86_64.default.toml  x86_64.legacy.json  x86_64.toml
configs/arch/: x86  x86_64
configs/bios/x86_64/: cargo.toml
configs/dev/x86_64/: cargo_image.toml  cargo_kernel.toml
configs/efi/x86_64/: cargo.toml  cargo_kernel.toml  config.toml  config_kernel.toml
configs/image/x86_64/: cargo_image.toml
configs/kernel/x86_64/: cargo_kernel.toml
configs/legacy/x86_64/: cargo_kernel.toml  config.toml
configs/mods/: core.py  fs.py
dev/builder/: Cargo.toml
dev/builder/src/: main.rs
dev/headers/src/: lib.rs
dev/headers/src/api/: elf.rs
dev/image_dev/: Cargo.toml
dev/kernel/: Cargo.toml
dev/kernel/src/: main.rs
dev/setup/: Cargo.toml
headers/: Cargo.toml
headers/src/: lib.rs
headers/src/api/: elf.rs
image_bootloader/: build.rs
image_dev/headers/: Cargo.toml
kernel/: Cargo.toml  main  main.rs
kernel/headers/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/includes/lang/: types.rs
kernel_patch/: main.rs
old-scripts/: example.sh
scripts/: check_cmd.sh  example.sh  prepare.sh
scripts/build_sys_install/: components.sh  rustup.sh  toolchain.sh
scripts/core/: cmd_chk.sh  lib.sh
src/: main.rs
