[package]
name = "unified_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_builtins = "0.1.91"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]

target = "x86_64-unknown-none"